--- a/html/my-smarter-site/css/styles.css
+++ b/html/my-smarter-site/css/styles.css
@@ -20,7 +20,38 @@ h1 {
 	color: red;
 }
 p.spacey {
-	letter-spacing: 1em;
-	word-spacing: 1em;
-	line-height: 2.4em;
+	letter-spacing: .1em;
+	word-spacing: .1em;
+	line-height: 1.2em;
+}
+h3 {
+	text-align: center;
+}
+p.pretty {
+	text-align: justify;
+}
+p.tabbed {
+	text-indent: 1.5em;	
+}
+blockquote {
+	font-size: .9em;
+	color: grey;
+}
+p.offset {
+	margin: 2em;
+}
+.enclosed {
+	margin: 1em 2em 1em 2em;
+	border: 4px solid pink;
+	padding: 5em;
+}
+h4, p.mid {
+	text-align: center;
+}
+h2#warm {
+	color: orange;
+}
+div#midpage {
+	margin: 0 3em 0 3em;
+	font-family: Arial, Helvetica, sans-serif;
 }
